welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var T:Array[Color]
      ^Array1:5: error: local variables must be initialized
  var T:Array[Color]
      ^Array1:31: error: not found: value T
    setCouleurBrosse(T[j])
                     ^Array1:31: error: not found: type j
    setCouleurBrosse(T[j])
                       ^